--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -4,5 +4,17 @@ jobs:
   docker-job:
     runs-on: ubuntu-latest
     steps:
-      - name: my-step
+      - name: print your register number
         run: echo "Hello World - 22it008"
+        
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Docker Build
+        run: docker build -t ammu@12345/ml-model-22it008 .
+
+       - name: Docker Images
+        run: docker images
+
+
+       
