--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -13,8 +13,16 @@ jobs:
       - name: Docker Build
         run: docker build -t ammu@12345/ml-model-22it008 .
 
-       - name: Docker Images
+      - name: Docker Images
         run: docker images
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker Push
+        run: docker push -t ammu@12345/ml-model-22it008
 
        
